client/stylesheets/style.styl
// Mixins

border-radius()
  -webkit-border-radius arguments
  -moz-border-radius arguments
  border-radius arguments

box-shadow()
  -webkit-box-shadow arguments
  -moz-box-shadow arguments
  box-shadow arguments

centerize()
  margin-left auto
  margin-right auto

category-circle()
  width arguments
  height @width
  border-radius (@width / 2)
  behavior url(PIE.htc) // IE8 support
  text-align center
  padding-top (@width / 3.5)
  color #fff
  opacity 1
  &:hover
    opacity 0.7

// Navbar declarations

.navbar
  height 60px
  margin-bottom 0 // Remove spacing between default and admin navbars
  
  // Logo
  .navbar-brand
    padding-top 15px
    img
      max-height 30px

ul.navbar-right
  padding-top 10px
  
  a
    padding 10px
    padding-right 0
    .category-circle
      category-circle(35px)

// Admin declarations

.admin-navbar
  border 0
  border-radius 0
  height 70px
  background-color #333
  
  .navbar-left
    padding-top 10px
    span
      color #fff
    a:hover
      opacity 0.5
      
  
  #login-buttons
    margin-top 20px
    a.login-link-text
      color #fff
      text-decoration none
    a.login-link-text:hover
      color #eee
      text-decoration underline

.admin
  margin-top 10px

// Carousel declarations

.carousel
  width 100%
  centerize()
  
  .carousel-inner .item img
    width 100%
  
  .carousel-button
    position relative
    top -60px
  
  .carousel-title
    padding-left 20px
    position relative
    top -66px
    color #fff
    opacity 0.8
    h3
      padding 10px
      font-weight 200
  
  .carousel-control
    background-image none
    opacity .5
    .fa
      position absolute
      top 50%
      &.fa-chevron-left
        right 50%
      &.fa-chevron-right
        left 50%   

// Articles

.article
  margin-bottom 60px
  
  .article-header
    width 100%
    display inline-block
    a.title
      float left
      color #000
      text-decoration none
      h2
        font-weight normal
    .buttons
      float right
      margin-top 22px
      a
        margin-left 5px
        .category-circle
          category-circle(35px)
  
  .article-content
    text-indent 40px
    text-align justify
  
  // Delete button
  .fa-trash-o
    color #f00
    margin-left 3px
  
  img.carousel-img
    width 100%
    max-height 425px
    margin-bottom 20px
  
  a.btn
      margin-top 10px

// Category tabs' content

.category-title
  margin-top 25px
  width 100%
  color #fff
  h1
    font-weight 300
    padding 10px

// Sidebar

.sidebar
  img
    width 100%
  ul
    margin-top 10px
    list-style-type none
    li
      a
        float left
        .category-circle
          category-circle(25px)
          padding-top 6px
      p.lead
        margin-left 35px
        margin-bottom 5px
  &.affix
    top 0

// Gallery

.album
  background-color #fff
  &:hover
    background-color #f6f6f6

// Calendar image

.calendar
  width 100%

// Footer

footer-spacing = 25px

.footer
  margin-top footer-spacing
  width 100%
  background-color #f6f6f6
  p
    margin footer-spacing 0
    &:first-child
      margin-bottom footer-spacing - 5px
    &:last-child
      margin-top footer-spacing - 5px
    text-align center
    // Snapchat icon
    img
      margin-left 20px
      width 14px

// Miscellaneous

html
  height 100%

body
  height 100%
  //margin-bottom 60px // Used for footer

